# llm_minor_project

./: .gitignore  LICENSE  Makefile  README.md  mainexample1.py  pyproject.toml  requirements.txt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
llm_minor_project/: __init__.py
llm_minor_project/data/: .gitignore  make_dataset.py
llm_minor_project/models/: model.py
